--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,7 @@ dev_dependencies:
     sdk: flutter
 
   flutter_launcher_icons: "^0.9.0"
+  device_preview: ^0.7.3
 
 flutter_icons:
   android: "launcher_icon"
