--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -18,7 +18,7 @@ publish_to: 'none' # Remove this line if you wish to publish to pub.dev
 version: 1.0.0+1
 
 environment:
-  sdk: ">=2.7.0 <3.0.0"
+  sdk: ">=2.12.0 <3.0.0"
 
 dependencies:
   flutter:
@@ -29,7 +29,7 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.3
   http: ^0.13.3
-  toast: ^0.1.5
+  fluttertoast: ^8.0.7
   intl: ^0.17.0
 
 dev_dependencies:
@@ -38,6 +38,7 @@ dev_dependencies:
 
   flutter_launcher_icons: "^0.9.0"
   device_preview: ^0.7.3
+  flutter_native_splash: ^1.1.8+4
 
 flutter_icons:
   android: "launcher_icon"
