--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -59,6 +59,8 @@ flutter:
   # To add assets to your application, add an assets section, like this:
   assets:
     - assets/ilustrasi-peta-sebaran-small.jpg
+    - assets/covid-test.jpg
+    - assets/covid-vaccine.jpg
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
