--- a/android/app/src/main/AndroidManifest.xml
+++ b/android/app/src/main/AndroidManifest.xml
@@ -8,7 +8,7 @@
     <uses-permission android:name="android.permission.INTERNET" />
     <application
         android:name="io.flutter.app.FlutterApplication"
-        android:label="coronaindonesiatracker"
+        android:label="Corona Indonesia Tracker"
         android:icon="@mipmap/launcher_icon">
         <activity
             android:name=".MainActivity"
