--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -32,6 +32,8 @@ dependencies:
   fluttertoast: ^8.0.7
   intl: ^0.17.0
   percent_indicator: ^3.0.1
+  bloc: ^7.0.0
+  flutter_bloc: ^7.0.1
 
 dev_dependencies:
   flutter_test:
